Add enhanced REST features and security with new services
Introduced core REST functionality including Exception handling, response management, and event loop handling. Added `SecuredResource` for role-based access control and extended test coverage with HTTP server configurator and new REST endpoints. Refactored module dependencies and updated annotations for consistency.